--- a/index.html
+++ b/index.html
@@ -1,28 +1,59 @@
+<html lang="pt-br">
 
-<html>
 <head>
-        <link rel="stylesheet" href="styles.css"></head>
-        <title>AluraFlix</title>
+    <link rel="stylesheet" href="styles.css">
+    <title>AluraFlix</title>
 </head>
 
 <body>
+    <header>ALURAFLIX</header>
 
-<header>ALURAFLIX</header>
+    <section>
+        <div class="chamada-texto">
+            <H1> ETALHES que você PERDEU em DIVERTIDA MENTE (Pixar / Disney) </H1>
+            <P>#divertida mente</P>
+        </div>
 
-<div>
-<H1> DETALHES que você PERDEU em DIVERTIDA MENTE (Pixar / Disney) </H1>
-<P>#divertida mente</P>
-</div>
 
-
-<div>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/ZJAS4j-nWmQ?si=2Mtqm_a3crBMkqk0"
-    title="YouTube video player" frameborder="0"
-    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-</div>
+        <div>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/ZJAS4j-nWmQ?si=2Mtqm_a3crBMkqk0"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+    </section>
 
 </body>
 
-
 </html>
+
+<section>
+    <div> class="chamada-texto">
+        <H1> Quem faz mais sucesso? | BARBIE LIFE IN THE DREAMHOU </H1>
+        <p>#barbie</p>
+    </div>
+
+    <div>
+        <iframe width=iframe width="560" height="315"
+            src="https://www.youtube.com/embed/UvPT07b0nvw?si=F8ZmcadWmUJU9xMF" title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    </div>
+</section>
+
+
+<section>
+    <div>
+        <H1> Moranguinho 101 - Conheça a Moranguinho </H1>
+        <p>#moranguinho</p>
+    </div>
+
+    <div>
+        <iframe width=<iframe width="560" height="315"
+            src="https://www.youtube.com/embed/ChjOI919UzM?si=SKPgZ9NlaccVrym1" title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    </div>
+</section>
